# Khun-Pan

./: .gitignore  .pre-commit-config.yaml  README.md  khunpan.py  puzzles.py  pyproject.toml  setup.cfg
src/khun_pan/: khunpan.py  puzzles.py
test/: test_board.py
tests/: test_board.py
