[project]
name = "Khun-Pan"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Matthias Telöken", email = "matthias.teloeken@gmail.com"},
]
dependencies = [
    "numpy>=1.26.4",
    "pytest>=8.2.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
